# daku

./: 404.html  Cargo.toml  README.md  about.html  api.html  audio.html  buffer.html  channels.html  client.html  clock.html  commands.html  daku.html  date.html  datetime.html  dimensions.html  fetch.html  file.html  glossary.html  gpu.html  guest.html  hid.html  host.html  index.html  introduction.html  lang.html  langregion.html  list.html  location.html  log.html  microphone.html  portals.html  positions.html  preferences.html  print.html  prompt.html  raster.html  region.html  screen.html  searchindex.js  searchindex.json  (+12 more)
.github/workflows/: publish.yml
cargo-daku/: Cargo.toml  README.md
cargo-daku/src/: main.rs
spec/: SUMMARY.md  audio.md  channels.md  commands.md  datetime.md  fetch.md  guest.md  introduction.md  lang.md  langregion.md  leapsecond.md  log.md  prompt.md  region.md  serve.md  timeadjustment.md  timedesignation.md  timezone.md
src/: cmd.rs  global.rs  lib.rs  portal.rs  run.rs  sys.rs  tls.rs
